syntax = "proto3";

package feeds.v1;

option go_package = "github.com/ericbutera/amalgam/rpc/gen/go/feeds";  // Adjust this path

service FeedService {
  rpc GetFeed (GetFeedRequest) returns (GetFeedResponse);
  rpc ListFeeds (ListFeedsRequest) returns (ListFeedsResponse);
  rpc CreateFeed (CreateFeedRequest) returns (CreateFeedResponse);
  rpc UpdateFeed (UpdateFeedRequest) returns (UpdateFeedResponse);
  rpc ListArticles (ListArticlesRequest) returns (ListArticlesResponse);
  rpc GetArticle (GetArticleRequest) returns (GetArticleResponse);
  rpc SaveArticle (SaveArticleRequest) returns (SaveArticleResponse);
  rpc FeedTask (FeedTaskRequest) returns (FeedTaskResponse);
}

message Feed {
  string id = 1;
  string url = 2;
  string name = 3;
}

message Article {
  string id = 1;
  string title = 2;
  string content = 3;
  string feed_id = 4;
  string url = 5;
  string image_url = 6;
  string preview = 7;
  string guid = 8;
  string author_name = 9;
  string author_email = 10;
}

message Empty {}

message GetFeedRequest {
  string id = 1;
}

message GetFeedResponse {
  Feed feed = 1;
}

message ListFeedsRequest {}

message ListFeedsResponse {
  repeated Feed feeds = 1;
}

message CreateFeedRequest {
  message Feed {
    string url = 1;
    string name = 2;
  }
  Feed feed = 1;
}

message CreateFeedResponse {
  string id = 1;
}

message UpdateFeedRequest {
  message Feed {
    string id = 1;
    string url = 2 [deprecated=true];
    string name = 3;
  }
  Feed feed = 1;
}

message UpdateFeedResponse {}

message ListArticlesRequest {
  string feed_id = 1;
}

message ListArticlesResponse {
  repeated Article articles = 1;
}

message GetArticleRequest {
  string id = 1;
}

message GetArticleResponse {
  Article article = 1;
}

message SaveArticleRequest {
  Article article = 1;
}

message SaveArticleResponse {
  string id = 1;
}

message ValidationErrors {
  repeated ValidationError errors = 1;
}
message ValidationError {
  string field = 1;
  string tag = 2;
  string raw_message = 3;
  string message = 4;
}

message FeedTaskRequest {
  enum Task {
    TASK_UNSPECIFIED = 0;
    TASK_GENERATE_FEEDS = 1;
  }
  Task task = 1;
}

message FeedTaskResponse {
  string id = 1;
  string message = 2;
}
